k8s/mysql-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-service
  name: mysql-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/networkIdruide: "true"
        io.kompose.service: mysql-service
    spec:
      containers:
      - env:
        - name: MYSQL_DABATASE
          value: idrivedb
        - name: MYSQL_ROOT_HOST
          value: '%'
        - name: MYSQL_ROOT_PASSWORD
          value: admin
        image: mysql
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - '/usr/bin/mysql --user=root --password=admin --execute \"SHOW DATABASES" '
          failureThreshold: 5
          periodSeconds: 4
          timeoutSeconds: 20
        name: docker-mysql
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
