k8s/order-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/networkIdruide: "true"
    io.kompose.service: order-service
  name: order-service
spec:
  containers:
  - env:
    - name: WAIT_HOSTS
      value: mysql:3306,kafka:9092
    - name: WAIT_HOSTS_TIMEOUT
      value: "300"
    - name: WAIT_HOST_CONNECT_TIMEOUT
      value: "30"
    - name: WAIT_SLEEP_INTERVAL
      value: "60"
    image: orderservice
    name: docker-orderservice
    ports:
    - containerPort: 8000
    resources: {}
  restartPolicy: OnFailure
status: {}
