k8s/packing-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/networkIdruide: "true"
    io.kompose.service: packing-service
  name: packing-service
spec:
  containers:
  - env:
    - name: WAIT_HOSTS
      value: mysql:3306,kafka:9092
    - name: WAIT_HOSTS_TIMEOUT
      value: "300"
    - name: WAIT_HOST_CONNECT_TIMEOUT
      value: "30"
    - name: WAIT_SLEEP_INTERVAL
      value: "60"
    image: packingservice
    name: docker-packingservice
    ports:
    - containerPort: 7000
    resources: {}
  restartPolicy: OnFailure
status: {}
