k8s/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/networkIdruide: "true"
        io.kompose.service: zookeeper
    spec:
      containers:
      - env:
        - name: ALLOW_ANONYMOUS_LOGIN
          value: yes
        - name: ZOOKEEPER_CLIENT_PORT
          value: "2181"
        image: confluentinc/cp-zookeeper
        imagePullPolicy: ""
        name: zookeeper
        ports:
        - containerPort: 2181
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
