k8s/catalog-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: catalog-service
  name: catalog-service
spec:
  ports:
  - name: "10555"
    port: 10555
    targetPort: 9000
  selector:
    io.kompose.service: catalog-service
status:
  loadBalancer: {}
