k8s/mysql-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-service
  name: mysql-service
spec:
  ports:
  - name: "6666"
    port: 6666
    targetPort: 3306
  selector:
    io.kompose.service: mysql-service
status:
  loadBalancer: {}
