k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kubernetes\Minikube\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  ports:
  - name: "10444"
    port: 10444
    targetPort: 8000
  selector:
    io.kompose.service: order-service
status:
  loadBalancer: {}
